# tango

./: .gitmodules
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/es/uvigo/ftroncoso/tango/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/es/uvigo/ftroncoso/tango/: ExtEditText.java  MainActivity.java  TangoNative.java  VideoRenderer.java
app/src/main/jni/: TangoApp.cpp  TangoApp.h  jni.cpp  jni_interface.cpp  jni_interface.h
app/src/main/res/drawable/: btn_base_red.xml  btn_cal.xml  btn_rgb.xml  btn_shutter.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml
app/src/test/java/es/uvigo/ftroncoso/tango/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
